# services/Orders/src/main/resources/api.yml
@@ -81,20 +81,20 @@ paths:
         '404':
           description: Order not found
 
-  /orders/products:
+  /orders/productName:
     get:
-      summary: Retrieve order by product
-      operationId: getOrdersByProduct
+      summary: Get orders by product name
+      operationId: getOrderByProductName
       parameters:
-        - name: product
-          in: query
-          description: product of order to retrieve
-          required: true
+        - in: query
+          name: productName
           schema:
             type: string
+          required: true
+          description: Name of the product to search orders for
       responses:
         '200':
-          description: Retrieve success response
+          description: A list of orders matching the product name
           content:
             application/json:
               schema:
@@ -102,7 +102,28 @@ paths:
                 items:
                   $ref: '#/components/schemas/OrderDTO'
         '404':
-          description: Order not found
+          description: No orders found for the provided product name
+
+  /orders/orderer:
+    get:
+      summary: Get orders by orderer identity number
+      operationId: getOrderByOrdererIdNo
+      parameters:
+        - in: query
+          name: ordererIdNo
+          schema:
+            type: string
+          required: true
+          description: Identity number of the orderer to search orders for
+      responses:
+        '200':
+          description: An order matching the identity number
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDTO'
+        '404':
+          description: No orders found for the provided orderer id number
 
   /orders/id:
     get:
@@ -218,6 +239,23 @@ components:
         quantity:
           type: integer
         products:
-          type: array
-          items:
-            type: string
+          type: object
+          additionalProperties:
+            type: integer
+        ordererFullName:
+          type: string
+        ordererIdNo:
+          type: string
+
+    ProductDTO:
+      type: object
+      properties:
+        productName:
+          type: string
+        productNumber:
+          type: string
+        quantity:
+          type: integer
+        expirationDate:
+          type: string
+          format: date-time
